# ai_obsidian

./: .env_example  .gitignore  README.md  config.py  debug.py  index.py  main.py  pyproject.toml  quickadd.js  run.sh  run_search.sh  search.py  search.sh
scripts/: search.sh
